Anomaly detector - deleted ListUtils class and small perf. improvements.